--- a/index.html
+++ b/index.html
@@ -204,6 +204,89 @@
         </div>
       </div>
     </section>
+    <section id="segunda">
+      <div id="segundaContainer" class="container-fluid">
+        <div class="row">
+          <span>
+            <h2>UNA OPORTUNIDAD PARA CADA PERFIL.</h2>
+          </span>
+          <p><span>1</span> COMPRÁ Y RADICÁ TU EMPRESA.</p>
+          <p><span>2</span> COMPRÁ Y GENERÁ UN RETORNO ASEGURADO.</p>
+        </div>
+        <div class="row">
+          <div id="imageCarousel">
+            <div>
+              <img src="img/flecha-izq.svg" alt="" />
+            </div>
+            <div><img src="img/Recurso 13.png" alt="" /></div>
+            <div><img src="img/flecha-der.svg" alt="" /></div>
+          </div>
+        </div>
+        <div class="row">
+          <div id="crossContainer">
+            <h2>
+              VENÍ A MODULAR Y<span> COMENZÁ CON GRANDES BENEFICIOS:</span>
+            </h2>
+            <h3>
+              <img src="img/x-icon.svg" alt="" /> COSTO CERO EN HABILITACIÓN
+            </h3>
+            <h3><img src="img/x-icon.svg" alt="" /> BENEFICIOS IMPOSITIVOS</h3>
+            <h3>
+              <img src="img/x-icon.svg" alt="" /> ABL SIN CARGO DURANTE DOS AÑOS
+            </h3>
+            <h3>
+              <img src="img/x-icon.svg" alt="" /> SEGURIDAD E HIGIENE SIN CARGO
+              DURANTE DOS AÑOS
+            </h3>
+            <h3>
+              <img src="img/x-icon.svg" alt="" /> SERVICIOS GENERALES SIN CARGO
+              DURANTE DOS AÑOS
+            </h3>
+          </div>
+        </div>
+        <div class="row">
+          <span>
+            <h2>UBICACIÓN:</h2>
+            <p>
+              Sobre un lote de 4200m2 en el Parque Industrial Ecológico de la
+              Cruz. Con acceso desde la Autopista 8 (ex ruta 8) en el km 79.
+            </p>
+            <p>A 79km de CABA y 230 del puerto de Rosario.</p>
+          </span>
+        </div>
+        <div class="row">
+          <div class="mapsContainer">
+            <img src="img/Recurso 14.png" alt="" />
+            <img src="img/Recurso 15.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="tercera">
+      <div id="terceraContainer" class="container-fluid">
+        <div class="row">
+          <span>
+            <h2>MÓDULOS COMPLETOS:</h2>
+          </span>
+          <ul>
+            <li>Entre 200 y 300m2.</li>
+            <li>Llave en mano. Listo para entrar.</li>
+            <li>Oficina + baño.</li>
+            <li>Baño en depósito.</li>
+            <li>Puerta de ingreso independiente.</li>
+            <li>Posibilidad de doble altura.</li>
+            <li>Ubicado dentro de un parque industrial.</li>
+            <li>Baja y media tensión.</li>
+            <li>Fibra óptica.</li>
+            <li>Calles asfaltadas</li>
+            <li>Acceso asfaltado desde autopista.</li>
+          </ul>
+        </div>
+        <div class="row">
+          <h1>Etapa I SOLO 7 MÓDULOS. Oportunidad de pozo.</h1>
+        </div>
+      </div>
+    </section>
     <footer>
       <div class="container-fluid">
         <div class="row">
